Bug fix where toggle had a background color when collapsed on mobile version

--- a/web/www/assets/styles.css
+++ b/web/www/assets/styles.css
@@ -1263,6 +1263,7 @@ p {
   .navigation.active {
     background-color: unset;
     width: 50px;
+    background: unset;
   }
 
   .navigation {
